# LeetCode

./: .gitignore  CMakeLists.txt  CMakePresents.json
inc/: CMakeLists.txt  Functions.cpp  Functions.h
include/: function.h
src/: function.cpp  main.cpp
